# RustLab1

Calculator/: Cargo.toml
Calculator/src/: main.rs
Calculator/static/: index.html
