[package]
name = "web_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rocket framework for building web applications
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# Serde for serializing/deserializing JSON
serde = { version = "1.0", features = ["derive"] }

# Optional for reading static files (if needed)
tokio = { version = "1", features = ["full"] }
